--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,22 +26,48 @@ jobs:
         with:
           node-version: '21.6.1'
 
-      - name: Install Dependencies & Build Application
+      - name: Install dependencies (clean install)
         run: |
           cd production-repo
-          npm install --force  # Force install to resolve peer dependency issues
-          npm run build || echo "Build failed, continuing deployment..."
+          npm ci --force
 
-      - name: Archive Static Files
+      - name: Build the application
+        run: npm run build
+
+      - name: Verify and Archive Static Files
         run: |
-          cd production-repo/dist
-          tar -czf ../../static-files.tar.gz assets img index.html public
+          cd production-repo  # Ensure we're inside the correct repo
 
-      - name: Upload Static Files Archive
+          # Check if dist/ exists before proceeding
+          if [ ! -d "dist" ]; then
+            echo "❌ Error: dist/ folder NOT found after build!"
+            exit 1
+          fi
+          
+          # Validate required files exist before archiving
+          for dir in "dist/assets" "dist/img"; do
+            if [ ! -d "$dir" ]; then
+              echo "❌ Error: Missing required directory: $dir"
+              exit 1
+            fi
+          done
+          
+          for file in "dist/index.html"; do
+            if [ ! -f "$file" ]; then
+              echo "❌ Error: Missing required file: $file"
+              exit 1
+            fi
+          done
+
+          # Create a compressed archive of required files
+          tar -czf ../static-files.tar.gz -C dist assets img index.html -C .. public
+
+      - name: Upload static files archive
         uses: actions/upload-artifact@v4
         with:
           name: static-files
           path: static-files.tar.gz
+
           
   # database-setup:
   #   runs-on: ubuntu-latest
