--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies (clean install)
         run: |
           cd production-repo
-          npm ci --force
+          npm ci
 
       - name: Build the application
         run: npm run build
