--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,12 @@ jobs:
         with:
           node-version: '21.6.1'
 
-      - name: Install dependencies (clean install)
-        run: |
-          cd production-repo
-          npm ci
+      - name: Change to Production Folder
+        run: cd production-repo
 
+      - name: Install dependencies (clean install)
+        run: npm ci
+        
       - name: Build the application
         run: npm run build
 
@@ -40,21 +41,21 @@ jobs:
 
           # Check if dist/ exists before proceeding
           if [ ! -d "dist" ]; then
-            echo "❌ Error: dist/ folder NOT found after build!"
+            echo "Error: dist/ folder NOT found after build!"
             exit 1
           fi
           
           # Validate required files exist before archiving
           for dir in "dist/assets" "dist/img"; do
             if [ ! -d "$dir" ]; then
-              echo "❌ Error: Missing required directory: $dir"
+              echo "Error: Missing required directory: $dir"
               exit 1
             fi
           done
           
           for file in "dist/index.html"; do
             if [ ! -f "$file" ]; then
-              echo "❌ Error: Missing required file: $file"
+              echo "Error: Missing required file: $file"
               exit 1
             fi
           done
