--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,24 @@ jobs:
         with:
           node-version: '21.6.1'
 
-      - name: Change to Production Folder
-        run: cd production-repo
+      # - name: Change to Production Folder
+      #   run: cd production-repo
 
-      - name: Install dependencies (clean install)
-        run: npm ci
+      # - name: Install dependencies (clean install)
+      #   run: npm ci
+      - name: Install dependencies (if package-lock.json is missing)
+        run: |
+          cd production-repo  # Move into the repo
+          ls -lah  # List files to confirm package-lock.json exists
+          
+          if [ -f "package-lock.json" ]; then
+            echo "Found package-lock.json, using npm ci"
+            npm ci --force
+          else
+            echo "package-lock.json not found, using npm install"
+            npm install --force
+          fi
+
         
       - name: Build the application
         run: npm run build
