--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build, Dockerize, Deploy, and Database Operations
+name: Build
 
 on:
   workflow_dispatch: {}
@@ -41,11 +41,6 @@ jobs:
           cd production-repo  # Ensure we are still in the right directory
           ls -lah             # Debugging step to verify files
           npm run build
-
-
-        
-      - name: Build the application
-        run: npm run build
 
       - name: Verify and Archive Static Files
         run: |
